apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-go
  labels:
    app: app-go
spec:
  replicas: 1
  strategy:
     type: RollingUpdate
     rollingUpdate:
        maxUnavailable: 1
        maxSurge: 1
  minReadySeconds: 2
  selector:
    matchLabels:
      app: app-go
  template:
    metadata:
      labels:
        app: app-go
    spec:
      containers:
      - name: app-go
        image: martooo/app-go:v1
        ports:
        - containerPort: 8080
#etcetera
