service-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-app
spec:
  selector:
    app: app-ws
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: NodePort
